notifications button on mobile now send users directly to requests component and minor fixes have been made to characters form

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,18 @@ body {
     $appHeight: calc(100vh - 51px);
     font-family: $mainFont;
 
+    &.compact {
+        #maindiv {
+            div:nth-child(3) {
+                overflow-x: auto;
+            }
+        }
+
+        #pacaNavbar #notificationList {
+            display: none;
+        }
+    }
+
     #mainContainer {
         margin-top: 51px;
         margin-left: 0;
@@ -40,12 +52,6 @@ body {
             #maindiv {
                 div.btn-toolbar {
                     margin-bottom: 50px;
-                }
-
-                &.compact {
-                    div:nth-child(3) {
-                        overflow-x: auto;
-                    }
                 }
             }
         }
